hphp/hack/test/typecheck/new_inference/typehole/lambda_constraint_bad.php.like_types.exp
File "lambda_constraint_bad.php", line 18, characters 15-21:
Invalid argument (Typing[4110])
File "lambda_constraint_bad.php", line 13, characters 27-27:
Expected ~[unresolved] because it is an unenforceable type
File "lambda_constraint_bad.php", line 18, characters 19-19:
But got C
